crates/nova-parser/tests/snapshots/parser_tests__snapshot_impl_with_associated_type_binding.snap
---
source: crates/nova-parser/tests/parser_tests.rs
expression: ast
---
Some(
    File {
        items: [
            Spanned {
                value: Impl(
                    ImplBlock {
                        docs: [],
                        attrs: [],
                        generics: [],
                        trait_: Some(
                            Spanned {
                                value: Path {
                                    segments: [
                                        Spanned {
                                            value: "It",
                                            span: Span {
                                                start: 5,
                                                end: 7,
                                                file: FileId(
                                                    0,
                                                ),
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 5,
                                    end: 7,
                                    file: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                        ty: Spanned {
                            value: Path {
                                path: Path {
                                    segments: [
                                        Spanned {
                                            value: "W",
                                            span: Span {
                                                start: 12,
                                                end: 13,
                                                file: FileId(
                                                    0,
                                                ),
                                            },
                                        },
                                    ],
                                },
                                args: [],
                            },
                            span: Span {
                                start: 12,
                                end: 13,
                                file: FileId(
                                    0,
                                ),
                            },
                        },
                        where_clause: [],
                        functions: [
                            Function {
                                docs: [],
                                attrs: [],
                                vis: Private,
                                is_async: false,
                                name: Spanned {
                                    value: "get",
                                    span: Span {
                                        start: 54,
                                        end: 57,
                                        file: FileId(
                                            0,
                                        ),
                                    },
                                },
                                generics: [],
                                params: [
                                    Param {
                                        is_mut: false,
                                        name: Spanned {
                                            value: "self",
                                            span: Span {
                                                start: 58,
                                                end: 62,
                                                file: FileId(
                                                    0,
                                                ),
                                            },
                                        },
                                        ty: Spanned {
                                            value: Infer,
                                            span: Span {
                                                start: 58,
                                                end: 62,
                                                file: FileId(
                                                    0,
                                                ),
                                            },
                                        },
                                    },
                                ],
                                return_ty: Some(
                                    Spanned {
                                        value: Path {
                                            path: Path {
                                                segments: [
                                                    Spanned {
                                                        value: "Int",
                                                        span: Span {
                                                            start: 67,
                                                            end: 70,
                                                            file: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ],
                                            },
                                            args: [],
                                        },
                                        span: Span {
                                            start: 67,
                                            end: 70,
                                            file: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ),
                                where_clause: [],
                                body: Spanned {
                                    value: Block {
                                        stmts: [],
                                        trailing: Some(
                                            Spanned {
                                                value: Lit(
                                                    Int(
                                                        1,
                                                    ),
                                                ),
                                                span: Span {
                                                    start: 73,
                                                    end: 74,
                                                    file: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ),
                                    },
                                    span: Span {
                                        start: 71,
                                        end: 76,
                                        file: FileId(
                                            0,
                                        ),
                                    },
                                },
                            },
                        ],
                        consts: [
                            ConstDecl {
                                docs: [],
                                attrs: [],
                                vis: Private,
                                name: Spanned {
                                    value: "N",
                                    span: Span {
                                        start: 39,
                                        end: 40,
                                        file: FileId(
                                            0,
                                        ),
                                    },
                                },
                                ty: Spanned {
                                    value: Path {
                                        path: Path {
                                            segments: [
                                                Spanned {
                                                    value: "Int",
                                                    span: Span {
                                                        start: 42,
                                                        end: 45,
                                                        file: FileId(
                                                            0,
                                                        ),
                                                    },
                                                },
                                            ],
                                        },
                                        args: [],
                                    },
                                    span: Span {
                                        start: 42,
                                        end: 45,
                                        file: FileId(
                                            0,
                                        ),
                                    },
                                },
                                value: Spanned {
                                    value: Lit(
                                        Int(
                                            1,
                                        ),
                                    ),
                                    span: Span {
                                        start: 48,
                                        end: 49,
                                        file: FileId(
                                            0,
                                        ),
                                    },
                                },
                            },
                        ],
                        assoc_types: [
                            AssocTypeBinding {
                                docs: [],
                                name: Spanned {
                                    value: "Item",
                                    span: Span {
                                        start: 21,
                                        end: 25,
                                        file: FileId(
                                            0,
                                        ),
                                    },
                                },
                                ty: Spanned {
                                    value: Path {
                                        path: Path {
                                            segments: [
                                                Spanned {
                                                    value: "Int",
                                                    span: Span {
                                                        start: 28,
                                                        end: 31,
                                                        file: FileId(
                                                            0,
                                                        ),
                                                    },
                                                },
                                            ],
                                        },
                                        args: [],
                                    },
                                    span: Span {
                                        start: 28,
                                        end: 31,
                                        file: FileId(
                                            0,
                                        ),
                                    },
                                },
                            },
                        ],
                    },
                ),
                span: Span {
                    start: 0,
                    end: 78,
                    file: FileId(
                        0,
                    ),
                },
            },
        ],
    },
)
