crates/nova-parser/tests/snapshots/parser_tests__snapshot_trait_with_associated_type.snap
---
source: crates/nova-parser/tests/parser_tests.rs
expression: ast
---
Some(
    File {
        items: [
            Spanned {
                value: Trait(
                    TraitDecl {
                        docs: [],
                        attrs: [],
                        vis: Private,
                        name: Spanned {
                            value: "It",
                            span: Span {
                                start: 6,
                                end: 8,
                                file: FileId(
                                    0,
                                ),
                            },
                        },
                        generics: [],
                        supertraits: [],
                        where_clause: [],
                        items: [
                            AssocType {
                                docs: [],
                                name: Spanned {
                                    value: "Item",
                                    span: Span {
                                        start: 16,
                                        end: 20,
                                        file: FileId(
                                            0,
                                        ),
                                    },
                                },
                                bounds: [],
                            },
                            Required(
                                FunctionSig {
                                    docs: [],
                                    is_async: false,
                                    name: Spanned {
                                        value: "next",
                                        span: Span {
                                            start: 25,
                                            end: 29,
                                            file: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                    generics: [],
                                    params: [
                                        Param {
                                            is_mut: false,
                                            name: Spanned {
                                                value: "self",
                                                span: Span {
                                                    start: 30,
                                                    end: 34,
                                                    file: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                            ty: Spanned {
                                                value: Infer,
                                                span: Span {
                                                    start: 30,
                                                    end: 34,
                                                    file: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        },
                                    ],
                                    return_ty: Some(
                                        Spanned {
                                            value: Path {
                                                path: Path {
                                                    segments: [
                                                        Spanned {
                                                            value: "Int",
                                                            span: Span {
                                                                start: 39,
                                                                end: 42,
                                                                file: FileId(
                                                                    0,
                                                                ),
                                                            },
                                                        },
                                                    ],
                                                },
                                                args: [],
                                            },
                                            span: Span {
                                                start: 39,
                                                end: 42,
                                                file: FileId(
                                                    0,
                                                ),
                                            },
                                        },
                                    ),
                                    where_clause: [],
                                },
                            ),
                        ],
                    },
                ),
                span: Span {
                    start: 0,
                    end: 44,
                    file: FileId(
                        0,
                    ),
                },
            },
        ],
    },
)
